syntax = "proto3";
package messages;

message Blob {
  string SHA = 1;
  string Content = 2;
}

message CommitRecord {
  string SHA = 1;
  string BranchName = 2;
}

message BlobRecord {
  string SHA = 1;
  string Name = 2;
}

