syntax = "proto3";
package messages;

import "git.proto";
import "options.proto";

message NewInitiativeReq {
  string RepositoryName = 1 [(auth) = JWTAuthRequired];
  string AreaID = 2 [(auth) = JWTAuthRequired];
  string Content = 3;
}

message NewInitiativeResp {
  CommitRecord CommitRecord  = 1;
  string Tk = 2;
}

message GetDocReq {
  string RepositoryName = 1 [(auth) = JWTAuthRequired];
  string AreaID = 2 [(auth) = JWTAuthRequired];
  string GitRef = 3;
}

message GetDocResp {
  Blob Blob = 1;
}

